--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,5 @@ django-rest-auth>=0.9.5
 django-cors-headers>=3.5.0
 pandas>=1.1.1
 joblib>=0.16.0
-torch
-torchvision
 pillow
+# pip install --no-cache torch==1.9.0+cpu torchvision==0.10.0+cpu torchaudio==0.9.0 -f https://download.pytorch.org/whl/torch_stable.html
